8174269: Remove COMPAT locale data provider from JDK
Reviewed-by: ihse, joehw